# QtAwesome

./: CMakeLists.txt  QtAwesome-config.cmake
QtAwesome/: CMakeLists.txt  QtAwesome.cpp  QtAwesome.h  QtAwesomeAnim.cpp  QtAwesomeAnim.h
QtAwesomeSample/: CMakeLists.txt  main.cpp
